index.css
body {
  margin: 0;
  padding: 0;
  background: #fcfcfc;
  color: #333;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
}

#main-slider {
  border-radius: 0;
  height: 80px;
  background: rgba(0, 0, 0, 0.1);
}
  #main-slider .specs-tab {
    position: absolute;
    top: 0;
    right: 0;
    cursor: pointer;
  }
    #main-slider .specs-tab .specs-bullets {
      position: absolute;
      top: 0;
      right: 0;
      height: 80px;
      margin: 0;
      padding: 0;
      list-style: none;
    }
      #main-slider .specs-tab .specs-bullets li {
        position: absolute;
        width: 20px;
        height: 20px;
      }
      #main-slider .specs-tab .specs-bullets li.passed {
        background: green;
      }
      #main-slider .specs-tab .specs-bullets li.failed {
        background: red;
      }
    #main-slider .specs-tab .specs-summary {
      margin: 0;
      padding: 0 30px;
      font-size: 40px;
      font-weight: bold;
      line-height: 80px;
      white-space: nowrap;
    }
      #main-slider .specs-tab .specs-summary i {
        margin: 0 0 0 10px;
      }
  #main-slider .handle {
    border-radius: 0;
    width: auto;
    height: 80px;
    padding: 0 30px;
    color: rgba(255, 255, 255, 0.8);
    font-size: 40px;
    font-weight: bold;
    line-height: 80px;
  }
    #main-slider .handle strong {
      color: #fff;
    }

#content {
  width: 100%;
  overflow: hidden;
}
.content-slides {
  width: 200%;
}
  .content-slides .slide {
    width: 50%;
  }
  .content-slides .slide.demo {
    float: left;
  }
  .content-slides .slide.specs {
    float: right;
  }

#HTMLReporter {
  position: relative;
  margin: 0;
  padding: 30px;
  background: #111;
  font-family: Monaco, "Lucida Console", monospace;
  font-size: 14px;
  line-height: 20px;
}
#HTMLReporter .alert {
  height: 20px;
  margin: 0 0 20px 0;
  padding: 0;
  color: #666;
  font-size: 20px;
  line-height: 20px;
}
#HTMLReporter .banner {
  position: absolute;
  top: 30px;
  right: 30px;
  float: none;
  margin: 0;
  padding: 0;
  font-size: 20px;
  line-height: 20px;
}
#HTMLReporter .banner span {
  margin: 0 0 0 10px;
}
#HTMLReporter .banner .title,
#HTMLReporter .banner .version {
  display: none;
}
#HTMLReporter .banner .duration {
  float: none;
  color: #666;
}
#HTMLReporter .results {
  margin: 0;
  padding: 0;
}
#HTMLReporter .results .summary {
  margin: 0;
  padding: 0;
}
#HTMLReporter .results .suite {
  margin: 10px 0;
}
#HTMLReporter .results .suite:last-child {
  margin: 0;
}
#HTMLReporter .suite a {
  color: #aaa;
}
#HTMLReporter .summary .specSummary.passed a {
  color: #5bb75b;
}
#HTMLReporter .summary .specSummary.failed a {
  color: #da4f49;
}
#HTMLReporter .stackTrace {
  margin: 0 0 10px 0;
  padding: 10px;
  border: 0;
  border-radius: 10px;
  background: #333;
  color: #ccc;
  font-size: 12px;
}

